--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
 
         <title>おかえりなさい</title>
     </head>
+    <div class="preloader-wrapper">
+      <div class="preloader">
+          <img src="https://i.gifer.com/7qy0.gif" alt="NILA">
+      </div>
+    </div>
     <body class="container">
       <div class="sidebar">
         <button class="nav-btn"></button>
